--- a/css/index.css
+++ b/css/index.css
@@ -682,7 +682,7 @@ body{
    position: relative;
    overflow: hidden;
 }
-.html-progress{
+.csharp-progress{
     position: absolute;
     top:10%;
     left:1%;
@@ -691,11 +691,11 @@ body{
     align-items: center;
     justify-content: center;
     transition: all .4s ease;
-    width:95%;
+    width:70%;
     border-radius: 10px;
     background: #c70039;
 }
-.js-progress{
+.kotlin-progress{
     position: absolute;
     top:10%;
     left:1%;
@@ -705,11 +705,11 @@ body{
     font-family: poppins;
     justify-content: center;
     transition: all .4s ease;
-    width:90%;
+    width:30%;
     border-radius: 10px;
     background: #c70039;
 }
-.adobe-progress{
+.java-progress{
     position: absolute;
     top:10%;
     left:1%;
@@ -718,11 +718,11 @@ body{
     align-items: center;
     justify-content: center;
     transition: all .4s ease;
-    width:83%;
+    width:40%;
     border-radius: 10px;
     background: #c70039;
 }
-.php-progress{
+.blender-progress{
     position: absolute;
     top:10%;
     left:1%;
@@ -730,7 +730,7 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
-    width:85%;
+    width:50%;
     border-radius: 10px;
     background: #c70039;
     transition: all .4s ease;
