--- a/css/index.css
+++ b/css/index.css
@@ -488,24 +488,30 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 100vw;
-    height: auto;
+    width: 100vw; /* Full viewport width */
+    height: auto; /* Height determined by content */
     padding-left: 50px;
     padding-right: 50px;
     flex-direction: row;
 }
 .about-img img{
-    width: 100%;
-    height:380px;
-    padding: 30px;
-    border-radius: 40px;
+    position: absolute; /* Position absolute for the image */
+    top: 0; /* Align to top */
+    left: 0; /* Align to left */
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    object-fit: contain; /* Maintain aspect ratio and cover the container */
+    border-radius: 40px; /* Match the border radius of the container */
+    display: block; /* Remove any extra space below the image */
 }
 .about-img {
-    width: 550px;
-    height:auto;
-    padding: 30px;
-    padding-top: 10px;
-    border-radius: 40px;
+    position: relative; /* Position relative for absolute positioning of child */
+    width: 100%; /* Full width */
+    max-width: 400px; /* Set a max width as needed */
+    padding-top: 177.78%; /* 16:9 Aspect Ratio (9 / 16 = 0.5625, so 1 / 0.5625 * 100) */
+    overflow: hidden; /* Prevent overflow */
+    border-radius: 40px; /* Rounded corners */
+
 }
 
 #about-content a{
@@ -673,7 +679,6 @@ body{
     left: 5%;
     top:30%;
 }
-
 
 .leftProficiency{
     display: inline-block;
