--- a/css/index.css
+++ b/css/index.css
@@ -822,7 +822,7 @@ padding-bottom: 40px;
     padding: 20px;
 }
 .portfolio-text button{
-    font-size: 16px;
+    font-size: .833vw;
     opacity: .8;
     font-family: poppins;
     font-weight: 200;
