--- a/css/index.css
+++ b/css/index.css
@@ -793,6 +793,7 @@ padding-top: 50px;
 padding-bottom: 40px;
 }
 
+
 .portfolio-text{
     width: 40%;
     padding-left: 1%;
@@ -855,6 +856,10 @@ padding-bottom: 40px;
     color:whitesmoke;
 }
 
+.portfolio-emphasis{
+    color:#c70039 ;
+    font-weight: bold;
+}
 .button-container{
     
     display: flex;
@@ -885,6 +890,7 @@ padding-bottom: 40px;
     justify-content: center; /* Center horizontally */
     overflow: hidden; /* Ensure any overflow is hidden */
 }
+
 .portfolio-image img::before{
     content: "";
     height: 100%;
@@ -2076,6 +2082,11 @@ for tabs and large phones
         background: #080808;
         padding-top: 15px;
         padding-bottom: 15px;
+    }
+    .portfolio-about{
+        font-family: poppins;
+        opacity: .8;
+        font-size: 20px;
     }
         .portfolio-image{
             position: relative;
