Added learn more for the rest of the projects

--- a/css/index.css
+++ b/css/index.css
@@ -924,6 +924,14 @@ padding-bottom: 40px;
     display: none;
 }
 
+#shadowed-escape{
+    display: none;
+}
+
+#go-home{
+    display: none;
+}
+
 .project-text{
     color: whitesmoke;
 }
