--- a/css/index.css
+++ b/css/index.css
@@ -710,7 +710,7 @@ body{
     align-items: center;
     justify-content: center;
     transition: all .4s ease;
-    width:70%;
+    width:80%;
     border-radius: 10px;
     background: #c70039;
 }
@@ -737,7 +737,7 @@ body{
     align-items: center;
     justify-content: center;
     transition: all .4s ease;
-    width:30%;
+    width:50%;
     border-radius: 10px;
     background: #c70039;
 }
@@ -749,7 +749,33 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
-    width:50%;
+    width:65%;
+    border-radius: 10px;
+    background: #c70039;
+    transition: all .4s ease;
+}
+.godot-progress{
+    position: absolute;
+    top:10%;
+    left:1%;
+    height: 80%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width:25%;
+    border-radius: 10px;
+    background: #c70039;
+    transition: all .4s ease;
+}
+.aseprite-progress{
+    position: absolute;
+    top:10%;
+    left:1%;
+    height: 80%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width:20%;
     border-radius: 10px;
     background: #c70039;
     transition: all .4s ease;
